[package]
name = "node-tidefi-runtime"
version = "1.0.0"
authors = [""]
edition = "2018"
license = "GNU GPL v3"
homepage = ""
repository = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.3", optional = true }
static_assertions = "1.1.0"
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"

# Substrate Pallets (almost identical to Polkadot)
pallet-authorship = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-babe = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-balances = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-grandpa = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-im-online = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-offences = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-session = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-staking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-multisig = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-staking-reward-curve = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-sudo = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-utility = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-timestamp = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-transaction-payment = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-treasury = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-collective = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-elections-phragmen = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-membership = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-scheduler = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-bounties = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-indices = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-identity = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-proxy = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-tips = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-recovery = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-election-provider-multi-phase = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-authority-discovery = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-bags-list = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
pallet-society = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", optional = true }
pallet-preimage = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

# Benchmarking Pallets
pallet-session-benchmarking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", optional = true }
pallet-offences-benchmarking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", optional = true }

# Substrate Frames
frame-support = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-system = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-executive = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
frame-election-provider-support = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

# Substrate SPs
sp-io = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-api = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-offchain = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-runtime = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-session = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-std = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-transaction-pool = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-version = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-authority-discovery = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-block-builder = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-consensus-babe = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-core = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-inherents = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-staking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-npos-elections = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

# Benchmarking
frame-benchmarking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", optional = true }
frame-system-benchmarking = { default-features = false, git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1", optional = true }

# Local Dependecies
tidefi-primitives = { git = "https://tributary.semantic-network.tech/semnet/tidefi/back/tidefi-primitives", branch = "feat/tidefi-1.0.1", default-features = false }
pallet-wrapr = { path = "../pallets/wrapr", default-features = false }
pallet-wrapr-stake = { path = "../pallets/wrapr-stake", default-features = false }
pallet-wrapr-rpc-runtime-api = { path = '../pallets/wrapr-rpc/runtime-api', default-features = false }
pallet-quorum = { path = "../pallets/quorum", default-features = false }
pallet-oracle = { path = "../pallets/oracle", default-features = false }
pallet-security = { path = "../pallets/security", default-features = false }
pallet-fees = { path = "../pallets/fees", default-features = false }

pallet-assets = { default-features = false, path = "../pallets/assets" }
pallet-asset-registry = { path = "../pallets/asset-registry", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

[dev-dependencies]
sp-io = { git ="https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }

[features]
default = ["std"]
std = [
    "scale-info/std",
    'codec/std',
    'log/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-bags-list/std',
    'pallet-im-online/std',
    'pallet-offences/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-authority-discovery/std',
    'pallet-multisig/std',
    'pallet-sudo/std',
    'pallet-indices/std',
    'pallet-identity/std',
    'pallet-proxy/std',
    'pallet-recovery/std',
    'pallet-utility/std',
    "pallet-bounties/std",
    'pallet-tips/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-elections-phragmen/std',
    'frame-election-provider-support/std',
    'pallet-membership/std',
    'pallet-scheduler/std',
    "pallet-election-provider-multi-phase/std",
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-io/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "sp-npos-elections/std",

    "pallet-assets/std",
    
    "pallet-wrapr/std",
    "pallet-wrapr-stake/std",
    "pallet-wrapr-rpc-runtime-api/std",
    "pallet-quorum/std",
    "pallet-oracle/std",
    "pallet-security/std",
    "pallet-asset-registry/std",
    "pallet-fees/std",
    "pallet-preimage/std",

    "tidefi-primitives/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-collective/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-election-provider-support/runtime-benchmarks",
    "pallet-society/runtime-benchmarks",
    "pallet-bounties/runtime-benchmarks",
    "pallet-election-provider-multi-phase/runtime-benchmarks",
    "pallet-elections-phragmen/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-indices/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-membership/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-treasury/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-session-benchmarking",
    "pallet-offences-benchmarking",
    "pallet-assets/runtime-benchmarks",
    'pallet-bags-list/runtime-benchmarks',
	"pallet-preimage/runtime-benchmarks",
    
    "pallet-wrapr/runtime-benchmarks",
    "pallet-wrapr-stake/runtime-benchmarks",
    "pallet-quorum/runtime-benchmarks",
    "pallet-oracle/runtime-benchmarks",
    "pallet-asset-registry/runtime-benchmarks",
]
