[package]
name = "pallet-assets"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.8", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
# Needed for type-safe access to storage DB.
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }


[dev-dependencies]
sp-core = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-std = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-balances = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
