[package]
authors = ["Semantic Network Team"]
description = ''
edition = '2021'
homepage = 'https://substrate.dev'
name = 'pallet-fees'
repository = ''
version = "1.0.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2'

[dependencies]
scale-info = { version = "1.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-timestamp = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
pallet-security = { default-features = false, path = "../security" }
sp-runtime = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-timestamp/std",
    "pallet-security/std"
]
runtime-benchmarks = ["frame-benchmarking"]
