[package]
version = "0.7.0"
name = "pallet-oracle"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3'

[dependencies]
scale-info = { version = "2.4", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-sudo = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-timestamp = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-security = { path = "../security", default-features = false }
pallet-fees = { path = "../fees", default-features = false }
pallet-sunrise = { path = "../sunrise", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-tidefi-stake = { path = "../tidefi-stake", default-features = false }
frame-utils = { default-features = false, path = "../utils" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[features]
default = ['std']
std = [
    "serde",
    "scale-info/std",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-sudo/std',
    'tidefi-primitives/std',
    "frame-benchmarking/std",
    "pallet-security/std",
    "pallet-fees/std",
    "pallet-timestamp/std",
    "pallet-asset-registry/std",
    "pallet-tidefi-stake/std",
    "pallet-sunrise/std",
    "frame-utils/std"

]
runtime-benchmarks = ["frame-benchmarking", "pallet-assets/runtime-benchmarks", "frame-system/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]