[package]
version = "0.6.3"
name = "pallet-quorum"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3'

[dependencies]
scale-info = { version = "2.1", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-sudo = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-balances = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
pallet-assets = { default-features = false, path = "../assets" }
pallet-sunrise = { path = "../sunrise", default-features = false }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "substrate-monthly-2023-02", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-security = { path = "../security", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-io = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }

[features]
default = ['std']
std = [
    "scale-info/std",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'pallet-sudo/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-security/std",
    "pallet-asset-registry/std",
    "pallet-sunrise/std",
]
runtime-benchmarks = ["frame-benchmarking", "pallet-assets/runtime-benchmarks"]
