[package]
version = "0.7.0"
name = "pallet-sunrise"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3'

[dependencies]
scale-info = { version = "2.7", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-timestamp = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
pallet-security = { default-features = false, path = "../security" }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-std = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-tidefi-stake = { path = "../tidefi-stake", default-features = false }
sp-arithmetic = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-utils = { default-features = false, path = "../utils" }

[dev-dependencies]
serde = { version = "1.0.179" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'pallet-balances/std',
    'tidefi-primitives/std',
    "serde",
    "pallet-assets/std",
    "pallet-timestamp/std",
    "pallet-security/std",
    "pallet-asset-registry/std",
    "pallet-tidefi-stake/std",
    "frame-utils/std"
]
runtime-benchmarks = ["pallet-assets/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]