[package]
version = "0.2.1"
name = "pallet-tidefi-rpc"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '3' }
jsonrpc-core        = '18.0.0'
jsonrpc-core-client = '18.0.0'
jsonrpc-derive      = '18.0.0'
jsonrpc-pubsub      = "18.0.0"
tidefi-primitives   = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
serde               = { version = '1.0.124', features = ['derive'] }
sp-api              = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-blockchain       = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-core             = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-runtime          = { git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-support       = { git = "https://github.com/tidelabs/substrate", branch = "tidechain", default-features = false }

pallet-tidefi-rpc-runtime-api = { path = 'runtime-api' }
