[package]
version = "0.7.0"
name = "pallet-tidefi-rpc"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[dependencies]
codec               = { package = 'parity-scale-codec', version = '3' }
jsonrpsee           = { version = "0.16.2", features = ["server", "macros"] }
tidefi-primitives   = { git = "https://github.com/tidelabs/primitives", branch = "substrate-monthly-2023-02", default-features = false }
serde               = { version = '1.0.124', features = ['derive'] }
sp-api              = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-blockchain       = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-core             = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
sp-runtime          = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev" }
frame-support       = { git = "https://github.com/tidelabs/substrate", branch = "tidechain-dev", default-features = false }
pallet-tidefi-rpc-runtime-api = { path = 'runtime-api' }
thiserror = "1.0.30"
