[package]
version = "0.1.4"
name = "pallet-tidefi-stake"
authors = ["Semantic Network Team"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3'

[dependencies]
scale-info = { version = "2.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
sp-runtime = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-io = {  default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-asset-registry = { path = "../asset-registry", default-features = false }

pallet-timestamp = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-security = { default-features = false, path = "../security" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

[features]
default = ['std']
std = [
    "scale-info/std",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-asset-registry/std",
    "pallet-timestamp/std",
    "pallet-security/std"
]
runtime-benchmarks = ["frame-benchmarking"]
