[package]
version = "0.7.0"
name = "pallet-tidefi-stake"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3'

[dependencies]
hex-literal = "0.3.1"
scale-info = { version = "2.1", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = {  default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tidelabs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-asset-registry = { path = "../asset-registry", default-features = false }

pallet-timestamp = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-security = { default-features = false, path = "../security" }
log = { version = "0.4.17", default-features = false }
frame-utils = { default-features = false, path = "../utils" }

[dev-dependencies]
serde = { version = "1.0.159" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
pallet-quorum = { path = "../quorum", default-features = false }
pallet-oracle = { path = "../oracle", default-features = false }
pallet-fees = { path = "../fees", default-features = false }
pallet-sunrise = { path = "../sunrise", default-features = false }
pallet-tidefi = { path = "../tidefi", default-features = false }

[features]
default = ['std']
std = [
    "scale-info/std",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-io/std',
    'sp-runtime/std',
    'pallet-balances/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-asset-registry/std",
    "pallet-timestamp/std",
    "pallet-security/std",
    "pallet-quorum/std",
    "pallet-oracle/std",
    "pallet-fees/std",
    "pallet-sunrise/std",
    "pallet-tidefi/std",
    "frame-utils/std"
]
runtime-benchmarks = ["frame-benchmarking", "frame-system/runtime-benchmarks", "pallet-assets/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
