[package]
version = "0.1.4"
name = "pallet-tidefi"
authors = ["Semantic Network Team"]
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2'

[dependencies]
scale-info = { version = "1.0", default-features = false }
frame-support = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-system = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-sudo = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-balances = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-timestamp = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
pallet-assets = { default-features = false, path = "../assets" }
sp-runtime = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
frame-benchmarking = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain", optional = true }
sp-std = {  default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
sp-io = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }
tidefi-primitives = { git = "https://github.com/tide-labs/primitives", branch = "dev", default-features = false }
serde      = { version = '1', features = ['derive'], optional = true }
pallet-quorum = { path = "../quorum", default-features = false }
pallet-oracle = { path = "../oracle", default-features = false }
pallet-security = { path = "../security", default-features = false }
pallet-asset-registry = { path = "../asset-registry", default-features = false }
pallet-fees = { path = "../fees", default-features = false }
pallet-tidefi-stake = { path = "../tidefi-stake", default-features = false }

[dev-dependencies]
serde = { version = "1.0.136" }
sp-core = { default-features = false, git = "https://github.com/tide-labs/substrate", branch = "tidechain" }

[features]
default = ['std']
std = [
    "scale-info/std",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-io/std',
    'pallet-balances/std',
    'pallet-sudo/std',
    'tidefi-primitives/std',
    "serde",
    "frame-benchmarking/std",
    "pallet-quorum/std",
    "pallet-oracle/std",
    "pallet-security/std",
    "pallet-asset-registry/std",
    "pallet-fees/std",
    "pallet-timestamp/std",
    "pallet-tidefi-stake/std",
]
runtime-benchmarks = ["frame-benchmarking"]